Correcting align items center to aside bottom icons

--- a/app/assets/stylesheets/aside.scss
+++ b/app/assets/stylesheets/aside.scss
@@ -118,10 +118,12 @@ aside {
         }
 
         .login-logout {
-          display: grid;
-          place-items: center;
-          transition: all 0.3s ease-out;
-          cursor: pointer;
+          a {
+            display: grid;
+            place-items: center;
+            transition: all 0.3s ease-out;
+            cursor: pointer;
+          }
 
           &:hover svg#icon-logout g {
             stroke: var(--danger-color);
